[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaqd-simple-pid"
authors = [
  {name = "yaq Developers", email = "blaise@untzag.com"},
]
description = "yaq daemon wrapping behavior of simple-pid python library"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "yaqd-core>=2020.06.3",
]
dynamic = ["version"]
license="LGPL-3.0-only"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Home Page" = "https://yaq.fyi"
Source = "https://github.com/yaq-project/yaqd-simple-pid"
Issues = "https://github.com/yaq-project/yaqd-simple-pid/issues"

[project.optional-dependencies]
dev = ["black", "pre-commit"]

[project.scripts]
yaqd-simple-pid = "yaqd_simple_pid._simple_pid:SimplePid.main"


[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39', 'py10', 'py11']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.hatch.version]
path = "yaqd_simple_pid/__version__.py"
